--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Bootcamp 2020</title>
 </head>
 <body>
-    <div><h1>Hello World from Abdullah</h1></div>
+    <div><h1>Hello World from <s>Abdullah</s> Abdullah Mir</h1></div>
 </body>
 </html>
