--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp 2020</title>
+    <style>
+
+        body {
+            background-color: lightgray;
+            
+        }
+
+        p {
+            background-color: palevioletred;
+        }
+        h1 {
+            background-color: blueviolet;
+        }
+
+    </style>
 </head>
 <body>
     <div><h1>Hello World from Mir family</h1></div>
+    <div><p>
+        The body tag defines the document's body. The 
+         element contains all the contents of an HTML
+          document, such as headings, paragraphs, images,
+           hyperlinks, tables, lists, etc.
+    </p></div>
 </body>
 </html>
