--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         }
         h1 {
             background-color: blueviolet;
+            display: inline-block;
+            padding: 50px;
         }
 
     </style>
