--- a/index.html
+++ b/index.html
@@ -11,24 +11,64 @@
             
         }
 
-        p {
-            background-color: palevioletred;
-        }
+        
         h1 {
             background-color: blueviolet;
             display: inline-block;
             padding: 50px;
+            text-align: center;
+        }
+
+        .maindiv {
+            display: inline-block;
+            width: 200px;
+            height: 200px;
+            text-align: center;
+        }
+        .div1 {
+            background-color: rgb(238, 87,205);
+            padding: 50px;
+            opacity: 1;
+        }
+        .div2 {
+            background-color: lightgreen;
+            padding: 50px;
+            opacity: 1;
+        }
+        .div3 {
+            background-color: lightsalmon;
+            padding: 50px;
+            opacity: 1;
+        }
+        .div4 {
+            background-color: lightyellow;
+            padding: 50px;
+            opacity: 1;
         }
 
     </style>
 </head>
 <body>
     <div><h1>Hello World from Mir family</h1></div>
-    <div><p>
-        The body tag defines the document's body. The 
-         element contains all the contents of an HTML
-          document, such as headings, paragraphs, images,
-           hyperlinks, tables, lists, etc.
-    </p></div>
+    <div class="maindiv">
+        <div class="div1">
+            Irfan Mir
+        </div>
+    </div>
+    <div class="maindiv">
+        <div class="div2">
+            Irfan Mir
+        </div>
+    </div>
+    <div class="maindiv">
+        <div class="div3">
+            Irfan Mir
+        </div>
+    </div>
+    <div class="maindiv">
+        <div class="div4">
+            Irfan Mir
+        </div>
+    </div>
 </body>
 </html>
