--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             opacity: 1;
         }
         .div2 {
-            background-color: lightgreen;
+            background-color: darkblue;
             padding: 50px;
             opacity: 1;
         }
         .div3 {
-            background-color: lightsalmon;
+            background-color: darkgreen;
             padding: 50px;
             opacity: 1;
         }
         .div4 {
-            background-color: lightyellow;
+            background-color: darkslateblue;
             padding: 50px;
             opacity: 1;
         }
@@ -57,17 +57,17 @@
     </div>
     <div class="maindiv">
         <div class="div2">
-            Irfan Mir
+            Imran Mir
         </div>
     </div>
     <div class="maindiv">
         <div class="div3">
-            Irfan Mir
+            Usman Mir
         </div>
     </div>
     <div class="maindiv">
         <div class="div4">
-            Irfan Mir
+            Samran Mir
         </div>
     </div>
 </body>
